# project-aurora

./: .env.example  .gitignore  README.MD  alembic.ini  docker-compose.yml  planner.MD  pyproject.toml
aurora_agent/: __init__.py  client.py  config.py  executor.py  plugin_cache.py  worker.py
aurora_core/: __init__.py  backup_scheduler.py  backup_service.py  config.py  dashboard_html.py  db.py  main.py  maintenance.py  models.py  routing.py  schema_guard.py  schemas.py  security.py  timeutils.py  web_auth.py
aurora_core/routes/: __init__.py  auth.py  dashboard.py  operations.py  superadmin.py
aurora_core/services/: backup_scheduler.py  backup_service.py  maintenance.py  models.py  plugin_store.py  queue.py  routing.py  schema_guard.py  schemas.py  security.py  web_auth.py
aurora_core/utils/: auth_utils.py
docs/: ISSUES_MEMO_2026-04-12.md  LARGE_FILE_SLICING_PLAYBOOK.md  TOKEN_EFFICIENT_WORKFLOW_RULES.md  slicing.agent.MD  workflow.agent.MD
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_users_and_audit_logs.py  0003_backups.py  0004_system_flags.py  0005_agent_resource_metrics.py
plugins/: echo_plugin.py
scripts/: backup_now.ps1  list_backups.ps1  migrate_and_restart.ps1  prune_backups.ps1  restart_core.ps1  restore_backup.ps1  run_all.ps1  stop_all.ps1  sync_backup_offsite.ps1
tests/: conftest.py
tests/integration/: test_e2e_flow.py
tests/unit/: test_api_contract.py  test_backup_api.py  test_plugin_executor.py  test_routing_and_leases.py  test_schema_guard.py
