[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-aurora"
version = "0.1.0"
description = "Project Aurora execution MVP"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.8,<6.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "requests>=2.32.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "alembic>=1.14.0,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: integration tests requiring live infrastructure",
]

[tool.setuptools.packages.find]
include = ["aurora_core*", "aurora_agent*"]
